Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2443

Moving single-replica tablets does not work in kudu CLI

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.7.0, 1.8.0, 1.7.1
    • 1.8.0
    • CLI, consensus
    • None

    Description

      When trying to move a single replica of non-replicated tablet using kudu tablet change_config move_replica, the system adds a non-voter, then promotes it, and then evict the newly added replica, doing it over and over again.

      Tablet 01701f0725e644d39b627045266f60bb of table 'impala::default.test1' is recovering: 1 on-going t
      ablet copies
        70f7ee61ead54b1885d819f354eb3405 (vc1316.halxg.cloudera.com:7050): RUNNING [LEADER]
        72fcec63e96f4248ae39d114eb3cd7c9 (vc1318.halxg.cloudera.com:7050): not running [NONVOTER]
          State:       INITIALIZED
          Data state:  TABLET_DATA_COPYING
          Last status: Tablet Copy: Downloading block 4611686003499827794 (45/2464)
      All reported replicas are:
        A = 70f7ee61ead54b1885d819f354eb3405
        B = 72fcec63e96f4248ae39d114eb3cd7c9
      The consensus matrix is:
       Config source | Replicas | Current term | Config index | Committed?
      ---------------+----------+--------------+--------------+------------
       master        | A*  B~   |              |              | Yes
       A             | A*  B~   | 15           | 143335       | Yes
       B             | A   B~   | 15           | 143335       | Yes
      

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            aserbin Alexey Serbin
            aserbin Alexey Serbin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment